header, main, & footer content updated

--- a/index.html
+++ b/index.html
@@ -6,8 +6,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/5402a1f93f.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="container">
+        <header>
+            <div class="headshot-h">
+                <h1>Ishan Deb</h1>
+            </div>
+            <div class="bio">
+                <div class="about-me">
+                    <h2>About Me</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, maxime illum.
+                         Optio quam voluptatem fuga autem quo rerum aspernatur nemo necessitatibus 
+                         numquam placeat, laboriosam eius eaque provident ipsum doloremque cumque?</p>
+                </div>
+                <div class="work-links">
+                    <a href="https://github.com/circular-biscuit">
+                        <span class="fab fa-github"></span>
+                    </a>
+                    <a href="https://www.linkedin.com/in/ishan-deb/">
+                        <span class="fab fa-linkedin"></span>
+                    </a>
+                </div>
+            </div>
+        </header>
+
+        <main>
+            <h2>My Work</h2>
+            <div class="card-container">
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+            </div>
+        </main>
+            
+        <footer>
+            <div class="contact-me">
+                <h2>Contact Me</h2>
+                <p><span class="fas fa-phone-alt"></span> 757-655-3368</p>
+                <p><span class="far fa-envelope"> ishandeb@live.com</span></p>
+                <div class="work-links">
+                    <a href="https://github.com/circular-biscuit">
+                        <span class="fab fa-github"></span>
+                    </a>
+                    <a href="https://www.linkedin.com/in/ishan-deb/">
+                        <span class="fab fa-linkedin"></span>
+                    </a>
+                </div>
+            </div>
+            <div class="headshot-f"></div>
+        </footer>
+    </div>
     
 </body>
 </html>
