--- a/index.html
+++ b/index.html
@@ -35,12 +35,36 @@
         <main>
             <h2>My Work</h2>
             <div class="card-container">
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
+                <div class="card">
+                    <figure><img src="images/pexels-markus-spiske-coding.jpg" alt=""></figure>
+                    <h3>Project 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt culpa distinctio minima! Omnis, sit nulla laboriosam aut voluptatum velit mollitia dicta voluptatibus eaque corrupti fuga debitis optio, tempora, dolore laudantium.</p>
+                </div>
+                <div class="card">
+                    <figure><img src="images/pexels-markus-spiske-coding.jpg" alt=""></figure>
+                    <h3>Project 2</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt culpa distinctio minima! Omnis, sit nulla laboriosam aut voluptatum velit mollitia dicta voluptatibus eaque corrupti fuga debitis optio, tempora, dolore laudantium.</p>
+                </div>
+                <div class="card">
+                    <figure><img src="images/pexels-markus-spiske-coding.jpg" alt=""></figure>
+                    <h3>Project 3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt culpa distinctio minima! Omnis, sit nulla laboriosam aut voluptatum velit mollitia dicta voluptatibus eaque corrupti fuga debitis optio, tempora, dolore laudantium.</p>
+                </div>
+                <div class="card">
+                    <figure><img src="images/pexels-markus-spiske-coding.jpg" alt=""></figure>
+                    <h3>Project 4</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt culpa distinctio minima! Omnis, sit nulla laboriosam aut voluptatum velit mollitia dicta voluptatibus eaque corrupti fuga debitis optio, tempora, dolore laudantium.</p>
+                </div>
+                <div class="card">
+                    <figure><img src="images/pexels-markus-spiske-coding.jpg" alt=""></figure>
+                    <h3>Project 5</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt culpa distinctio minima! Omnis, sit nulla laboriosam aut voluptatum velit mollitia dicta voluptatibus eaque corrupti fuga debitis optio, tempora, dolore laudantium.</p>
+                </div>
+                <div class="card">
+                    <figure><img src="images/pexels-markus-spiske-coding.jpg" alt=""></figure>
+                  <h3>Project 6</h3>  
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt culpa distinctio minima! Omnis, sit nulla laboriosam aut voluptatum velit mollitia dicta voluptatibus eaque corrupti fuga debitis optio, tempora, dolore laudantium.</p>
+                </div>
             </div>
         </main>
             
