--- a/index.html
+++ b/index.html
@@ -14,22 +14,25 @@
             <div class="headshot-h">
                 <h1>Ishan Deb</h1>
             </div>
-            <div class="bio">
-                <div class="about-me">
-                    <h2>About Me</h2>
+
+            <div class="about-me">
+                <h2>About Me</h2>
+                <div class="bio">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, maxime illum.
-                         Optio quam voluptatem fuga autem quo rerum aspernatur nemo necessitatibus 
+                         Optio quam voluptatem fuga autem quo rerum aspernatur nemo necessitatibus
                          numquam placeat, laboriosam eius eaque provident ipsum doloremque cumque?</p>
-                </div>
-                <div class="work-links">
-                    <a href="https://github.com/circular-biscuit">
-                        <span class="fab fa-github"></span>
-                    </a>
-                    <a href="https://www.linkedin.com/in/ishan-deb/">
-                        <span class="fab fa-linkedin"></span>
-                    </a>
+                    <div class="work-links">
+                        <a href="https://github.com/circular-biscuit">
+                            <span class="fab fa-github"></span>
+                        </a>
+                        <a href="https://www.linkedin.com/in/ishan-deb/">
+                            <span class="fab fa-linkedin"></span>
+                        </a>
+                    </div>
                 </div>
             </div>
+
+
         </header>
 
         <main>
@@ -37,32 +40,68 @@
             <div class="card-container">
                 <div class="card">
                     <figure><img src="images/pexels-markus-spiske-coding.jpg" alt=""></figure>
-                    <h3>Project 1</h3>
+                    <div class="project-heading">
+                        <h3>Project 1</h3>
+                        <div class="project-links">
+                            <span class="fab fa-github"></span>
+                            <span class="fas fa-external-link-alt"></span>
+                        </div>
+                    </div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt culpa distinctio minima! Omnis, sit nulla laboriosam aut voluptatum velit mollitia dicta voluptatibus eaque corrupti fuga debitis optio, tempora, dolore laudantium.</p>
                 </div>
                 <div class="card">
                     <figure><img src="images/pexels-markus-spiske-coding.jpg" alt=""></figure>
-                    <h3>Project 2</h3>
+                    <div class="project-heading">
+                        <h3>Project 2</h3>
+                        <div class="project-links">
+                            <span class="fab fa-github"></span>
+                            <span class="fas fa-external-link-alt"></span>
+                        </div>
+                    </div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt culpa distinctio minima! Omnis, sit nulla laboriosam aut voluptatum velit mollitia dicta voluptatibus eaque corrupti fuga debitis optio, tempora, dolore laudantium.</p>
                 </div>
                 <div class="card">
                     <figure><img src="images/pexels-markus-spiske-coding.jpg" alt=""></figure>
-                    <h3>Project 3</h3>
+                    <div class="project-heading">
+                        <h3>Project 3</h3>
+                        <div class="project-links">
+                            <span class="fab fa-github"></span>
+                            <span class="fas fa-external-link-alt"></span>
+                        </div>
+                    </div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt culpa distinctio minima! Omnis, sit nulla laboriosam aut voluptatum velit mollitia dicta voluptatibus eaque corrupti fuga debitis optio, tempora, dolore laudantium.</p>
                 </div>
                 <div class="card">
                     <figure><img src="images/pexels-markus-spiske-coding.jpg" alt=""></figure>
-                    <h3>Project 4</h3>
+                    <div class="project-heading">
+                        <h3>Project 4</h3>
+                        <div class="project-links">
+                            <span class="fab fa-github"></span>
+                            <span class="fas fa-external-link-alt"></span>
+                        </div>
+                    </div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt culpa distinctio minima! Omnis, sit nulla laboriosam aut voluptatum velit mollitia dicta voluptatibus eaque corrupti fuga debitis optio, tempora, dolore laudantium.</p>
                 </div>
                 <div class="card">
                     <figure><img src="images/pexels-markus-spiske-coding.jpg" alt=""></figure>
-                    <h3>Project 5</h3>
+                    <div class="project-heading">
+                        <h3>Project 5</h3>
+                        <div class="project-links">
+                            <span class="fab fa-github"></span>
+                            <span class="fas fa-external-link-alt"></span>
+                        </div>
+                    </div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt culpa distinctio minima! Omnis, sit nulla laboriosam aut voluptatum velit mollitia dicta voluptatibus eaque corrupti fuga debitis optio, tempora, dolore laudantium.</p>
                 </div>
                 <div class="card">
                     <figure><img src="images/pexels-markus-spiske-coding.jpg" alt=""></figure>
-                  <h3>Project 6</h3>  
+                  <div class="project-heading">
+                      <h3>Project 6</h3> 
+                      <div class="project-links">
+                          <span class="fab fa-github"></span>
+                          <span class="fas fa-external-link-alt"></span>
+                      </div>
+                  </div> 
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt culpa distinctio minima! Omnis, sit nulla laboriosam aut voluptatum velit mollitia dicta voluptatibus eaque corrupti fuga debitis optio, tempora, dolore laudantium.</p>
                 </div>
             </div>
@@ -71,8 +110,8 @@
         <footer>
             <div class="contact-me">
                 <h2>Contact Me</h2>
-                <p><span class="fas fa-phone-alt"></span> 757-655-3368</p>
-                <p><span class="far fa-envelope"> ishandeb@live.com</span></p>
+                <p class="phone-no"><span class="fas fa-phone-alt"></span> 757-655-3368</p>
+                <p class="email"><span class="far fa-envelope"> </span> ishandeb@live.com</p>
                 <div class="work-links">
                     <a href="https://github.com/circular-biscuit">
                         <span class="fab fa-github"></span>
