sidebar in progress

--- a/index.html
+++ b/index.html
@@ -132,23 +132,32 @@
     </div>
     
     <aside>
-        <div class="headshot-h"></div>
-            <div class="about-me">
-                <h2>About Me</h2>
-                <div class="bio">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, maxime illum.
-                         Optio quam voluptatem fuga autem quo rerum aspernatur nemo necessitatibus
-                         numquam placeat, laboriosam eius eaque provident ipsum doloremque cumque?</p>
-                    <div class="work-links">
-                        <a href="https://github.com/circular-biscuit">
-                            <span class="fab fa-github"></span>
-                        </a>
-                        <a href="https://www.linkedin.com/in/ishan-deb/">
-                            <span class="fab fa-linkedin"></span>
-                        </a>
-                    </div>
+        <!-- <div class="headshot-h"></div> -->
+        <div class="bio">
+            <h2>About Me</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, maxime illum.
+                    Optio quam voluptatem fuga autem quo rerum aspernatur nemo necessitatibus
+                    numquam placeat, laboriosam eius eaque provident ipsum doloremque cumque?</p>
+            <fieldset>
+                <legend>Work Links</legend>
+                <div class="work-links">
+                    <a href="https://github.com/circular-biscuit">
+                       <p><span class="fab fa-github"></span> Github</p>
+                    </a>
+                
+                    <a href="https://www.linkedin.com/in/ishan-deb/">
+                        <p><span class="fab fa-linkedin"></span> Linkedin</p>
+                    </a>
                 </div>
-            </div>
+            </fieldset>
+
+            <fieldset>
+                <legend>Languages</legend>
+                <p><span class="fab fa-html5"> HTML5</span></p>
+                <p><span class="fab fa-css3-alt"> CSS3</span></p>
+                <p><span class="fab fa-js-square"> JavaScript</span></p>
+            </fieldset>
+        </div>
     </aside>
 </body>
 </html>
